# Robotics_Assignment1

./: .gitignore  README.md  build_steps.md
Robotics_Assignment1/: package.xml  setup.cfg  setup.py
install/Robotics_Assignment1/lib/Robotics_Assignment1/: client  service
install/Robotics_Assignment1/share/Robotics_Assignment1/: package.bash  package.dsv  package.sh  package.xml  package.zsh
log/: latest_build
src/: setup.py
src/Robotics_Assignment1/: SpawnClient.py  SpawnService.py  client_member_function.py  package.xml  setup.py
src/Robotics_Assignment1/srv/: SpawnTurtles.srv
src/robotics_assignment1/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/robotics_assignment1/action/: RunSimulation.action  Turtle1Follow.action
src/robotics_assignment1/launch/: robotics_assignment1.launch.py
src/robotics_assignment1/robotics_assignment1/: MoveTurtle1ActionServer.py  RunSimulationActionClient.py  RunSimulationActionServer.py  SpawnClient.py  SpawnTurtlesServer.py  SpawnTurtlesServerClient.py  origSpawnClient.py
