<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotics_assignment1</name>
  <version>0.0.0</version>
  <description>The repository for Assignment 1 of Robotics and Autonomous Systems</description>
  <maintainer email="emmett.fitzharris@mycit.ie">Emmett Fitzharris</maintainer>
  <license>GPL</license>

  <depend>rclpy</depend>
  <depend>example_interfaces</depend>
  <depend>turtlesim</depend>
  <depend>std_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
