<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>Robotics_Assignment1</name>
  <version>0.0.0</version>
  <description>The repository for Assignment 1 of Robotics and Autonomous Systems</description>
  <maintainer email="emmett.fitzharris@mycit.ie">Emmett Fitzharris</maintainer>
  <license>GPL</license>

  <depend>rclpy</depend>
  <depend>example_interfaces</depend>
  <depend>turtlesim</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
